# conn_valanche_test

./: .env_example  ERC20.sol  ERC20_flattened.sol  README.md  Saludo.sol  abr_conn.py  pyproject.toml  saludo.py  test_nft.sol  test_nft_flattened.sol
.states/vm-cancun/: state.json
artifacts/: Educateth.json  Educateth_metadata.json  Saludo.json  Saludo_metadata.json  Test.json  Test_metadata.json
