[tool.poetry]
name = "conn-avalanche-test"
version = "0.1.0"
description = "Este es una prueba de la conexion desde python hacia la blockchain, en este caso Avalanche"
authors = ["oriojas <oscarriojas@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
web3 = "^7.3.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
